--- a/package.json
+++ b/package.json
@@ -3,18 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.12.9",
+    "@babel/traverse": "^7.12.9",
+    "@babel/types": "^7.12.7",
+    "@craco/craco": "^5.9.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "ace-builds": "^1.4.12",
+    "autoprefixer": "^9",
+    "postcss": "^7",
     "react": "^17.0.1",
+    "react-ace": "^9.2.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "rfdc": "^1.1.4",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
