--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@testing-library/user-event": "^12.1.10",
     "ace-builds": "^1.4.12",
     "autoprefixer": "^9",
+    "clsx": "^1.1.1",
+    "framer-motion": "^2.9.5",
     "postcss": "^7",
     "react": "^17.0.1",
     "react-ace": "^9.2.1",
