--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ace-builds": "^1.4.12",
     "autoprefixer": "^9",
     "clsx": "^1.1.1",
+    "fast-deep-equal": "^3.1.3",
     "framer-motion": "^2.9.5",
     "postcss": "^7",
     "react": "^17.0.1",
