feat: update editor styling

--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "fast-deep-equal": "^3.1.3",
     "framer-motion": "^2.9.5",
     "postcss": "^7",
+    "prismjs": "^1.22.0",
     "react": "^17.0.1",
     "react-ace": "^9.2.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-simple-code-editor": "^0.11.0",
     "rfdc": "^1.1.4",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "web-vitals": "^0.2.4"
