--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/traverse": "^7.12.9",
     "@babel/types": "^7.12.7",
     "@craco/craco": "^5.9.0",
+    "@monaco-editor/react": "^3.7.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
