--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/plugin-syntax-typescript": "^7.12.1",
     "@babel/traverse": "^7.12.9",
     "@babel/types": "^7.12.7",
     "@craco/craco": "^5.9.0",
@@ -11,18 +12,14 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "ace-builds": "^1.4.12",
     "autoprefixer": "^9",
     "clsx": "^1.1.1",
     "fast-deep-equal": "^3.1.3",
     "framer-motion": "^2.9.5",
     "postcss": "^7",
-    "prismjs": "^1.22.0",
     "react": "^17.0.1",
-    "react-ace": "^9.2.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
-    "react-simple-code-editor": "^0.11.0",
     "rfdc": "^1.1.4",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "web-vitals": "^0.2.4"
