--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-scripts": "4.0.1",
     "rfdc": "^1.1.4",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "web-vitals": "^0.2.4"
+    "use-debounce": "^5.2.0",
+    "web-vitals": "^0.2.4",
+    "worker-loader": "^3.0.6"
   },
   "scripts": {
     "start": "craco start",
